--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,4 @@
-AddDefaultCharset utf-8
+AuthType Basic
+AuthName "Protected Site"
+AuthUserFile /usr/home/yourusername/.htpasswd
+require valid-user
